datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

// ─── Enums ───────────────────────────────────────────────────────────

enum UserRole {
  USER
  ADMIN
}

enum UserStatus {
  ACTIVE
  BLOCKED
}

enum Clonality {
  MONOCLONAL
  POLYCLONAL
  RECOMBINANT
  OLIGOCLONAL
}

enum SourceOrganism {
  MOUSE
  RABBIT
  GOAT
  RAT
  DONKEY
  CHICKEN
  SHEEP
  HAMSTER
  GUINEA_PIG
  CAMELID
  OTHER
}

enum Species {
  HUMAN
  MOUSE
  RAT
  NON_HUMAN_PRIMATE
  PIG
  RABBIT
  ZEBRAFISH
  OTHER
}

enum Fixation {
  FFPE
  FRESH_FROZEN
  PFA
  ACETONE
  METHANOL
  OTHER
}

enum MultiplexMethod {
  CODEX
  CYCIF
  IMC
  MIBI
  IBEX
  ORION
  MICSSS
  PATHOPLEX
  VISIUM
  MERFISH
  IF
  IHC
  OTHER
}

enum ValidationStatus {
  PENDING
  VALIDATED
  REJECTED
}

enum SignalQuality {
  EXCELLENT
  GOOD
  MODERATE
  POOR
  NONE
}

enum Specificity {
  HIGH
  MODERATE
  LOW
  NON_SPECIFIC
}

// ─── Auth & User Models ───────────────────────────────────────────────

model User {
  id            String          @id @default(cuid())
  name          String?
  email         String          @unique
  emailVerified DateTime?
  image         String?
  role          UserRole        @default(USER)
  status        UserStatus      @default(ACTIVE)
  orcid         String?         @unique
  institution   String?
  accounts      Account[]
  sessions      Session[]
  Authenticator Authenticator[]
  reviews         Review[]
  approvedReviews Review[]        @relation("ReviewApprovals")
  blogPosts       BlogPost[]
  chatRateLimit   ChatRateLimit?
  experimentalReports ExperimentalReport[]
  panels              Panel[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Account {
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([provider, providerAccountId])
}

model Session {
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model VerificationToken {
  identifier String
  token      String
  expires    DateTime

  @@id([identifier, token])
}

model Authenticator {
  credentialID         String  @unique
  userId               String
  providerAccountId    String
  credentialPublicKey  String
  counter              Int
  credentialDeviceType String
  credentialBackedUp   Boolean
  transports           String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([userId, credentialID])
}

// ─── Rate Limiting ────────────────────────────────────────────────────

model ChatRateLimit {
  id              String   @id @default(cuid())
  userId          String   @unique
  requestCount    Int      @default(0)
  windowStartTime DateTime @default(now())
  lastRequestTime DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId])
  @@index([windowStartTime])
}

model RateLimit {
  id              String   @id @default(cuid())
  userId          String?
  ipAddress       String?
  resourceType    String
  requestCount    Int      @default(0)
  windowStartTime DateTime @default(now())
  lastRequestTime DateTime @default(now())

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, resourceType])
  @@unique([ipAddress, resourceType])
  @@index([userId, resourceType])
  @@index([ipAddress, resourceType])
  @@index([windowStartTime])
}

// ─── Chat ─────────────────────────────────────────────────────────────

model ChatMessage {
  id                String  @id @default(cuid())
  userId            String?
  modelName         String?
  inputTokens       Int     @default(0)
  totalTokens       Int     @default(0)
  reasoningTokens   Int     @default(0)
  cachedInputTokens Int     @default(0)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

// ─── Blog ─────────────────────────────────────────────────────────────

model BlogPost {
  id          String    @id @default(cuid())
  title       String
  slug        String    @unique
  excerpt     String?
  content     String
  published   Boolean   @default(false)
  publishedAt DateTime?

  metaTitle       String?
  metaDescription String?
  keywords        String  @default("[]")

  author   User   @relation(fields: [authorId], references: [id], onDelete: Cascade)
  authorId String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([slug])
  @@index([published])
  @@index([publishedAt])
  @@index([authorId])
  @@index([createdAt])
}

// ─── Reviews ──────────────────────────────────────────────────────────

model Review {
  id            String   @id @default(cuid())
  name          String
  reviewBody    String
  isHelpful     Boolean
  datePublished DateTime @default(now())

  isPending  Boolean   @default(true)
  isApproved Boolean   @default(false)
  approvedBy String?
  approvedAt DateTime?

  author             User               @relation(fields: [authorId], references: [id], onDelete: Cascade)
  authorId           String
  experimentalReport ExperimentalReport @relation(fields: [experimentalReportId], references: [id], onDelete: Cascade)
  experimentalReportId Int
  approvedByUser     User?              @relation("ReviewApprovals", fields: [approvedBy], references: [id], onDelete: SetNull)

  @@unique([authorId, experimentalReportId])
  @@index([experimentalReportId])
  @@index([isHelpful])
  @@index([datePublished])
  @@index([isPending])
  @@index([isApproved])
}

// ─── Spatial Proteomics: Ontology Models ──────────────────────────────

model CellType {
  id        String @id
  label     String
  parentIds String @default("[]")

  markers            CellTypeMarker[]
  structures         CellTypeStructure[]
  experimentalReports ExperimentalReport[]

  @@index([label])
}

model AnatomicalStructure {
  id        String @id
  label     String
  partOfIds String @default("[]")

  cellTypes           CellTypeStructure[]
  experimentalReports ExperimentalReport[]
}

model CellTypeStructure {
  cellTypeId  String
  structureId String
  source      String?

  cellType  CellType            @relation(fields: [cellTypeId], references: [id], onDelete: Cascade)
  structure AnatomicalStructure @relation(fields: [structureId], references: [id], onDelete: Cascade)

  @@id([cellTypeId, structureId])
}

// ─── Spatial Proteomics: Protein & Marker Models ──────────────────────

model Protein {
  id            String @id
  label         String
  geneSymbol    String?
  ensemblGeneId String?

  markers     CellTypeMarker[]
  antibodies  Antibody[]
  panelMarkers PanelMarker[]

  @@index([label])
  @@index([geneSymbol])
}

model CellTypeMarker {
  cellTypeId  String
  proteinId   String
  isCanonical Boolean @default(false)
  source      String?

  cellType CellType @relation(fields: [cellTypeId], references: [id], onDelete: Cascade)
  protein  Protein  @relation(fields: [proteinId], references: [id], onDelete: Cascade)

  @@id([cellTypeId, proteinId])
}

// ─── Spatial Proteomics: Antibody ─────────────────────────────────────

model Antibody {
  id              Int     @id @default(autoincrement())
  rrid            String? @unique
  name            String
  catalogNumber   String?
  cloneId         String?
  clonality       Clonality?
  sourceOrganism  SourceOrganism?
  targetSpecies   String  @default("[]")
  targetProteinId String?
  targetName      String?
  applications    String  @default("[]")
  conjugate       String?
  vendorName      String?
  vendorUrl       String?
  citationCount   Int     @default(0)

  targetProtein       Protein?             @relation(fields: [targetProteinId], references: [id], onDelete: SetNull)
  experimentalReports ExperimentalReport[]
  panelMarkers        PanelMarker[]

  @@index([name])
  @@index([targetProteinId])
  @@index([targetName])
}

// ─── Spatial Proteomics: Experimental Report ──────────────────────────

model ExperimentalReport {
  id               Int      @id @default(autoincrement())
  antibodyId       Int?
  cellTypeId       String?
  structureId      String?
  species          Species?
  tissueType       String?
  fixation         Fixation?
  method           MultiplexMethod?
  fluorophore      String?
  metalTag         String?
  cycleNumber      Int?
  dilution         String?
  antigenRetrieval String?
  status           ValidationStatus @default(PENDING)
  works            Boolean?
  signalQuality    SignalQuality?
  specificity      Specificity?
  notes            String?
  imageUrls        String   @default("[]")
  submitterId      String?
  isPublic         Boolean  @default(true)

  antibody  Antibody?            @relation(fields: [antibodyId], references: [id], onDelete: SetNull)
  cellType  CellType?            @relation(fields: [cellTypeId], references: [id], onDelete: SetNull)
  structure AnatomicalStructure? @relation(fields: [structureId], references: [id], onDelete: SetNull)
  submitter User?                @relation(fields: [submitterId], references: [id], onDelete: SetNull)
  reviews   Review[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([antibodyId])
  @@index([cellTypeId])
  @@index([structureId])
  @@index([submitterId])
  @@index([method])
  @@index([status])
}

// ─── Spatial Proteomics: Panel Builder ────────────────────────────────

model Panel {
  id          Int      @id @default(autoincrement())
  name        String
  description String?
  species     Species?
  fixation    Fixation?
  condition   String?
  ownerId     String?
  isPublic    Boolean  @default(false)

  owner  User?        @relation(fields: [ownerId], references: [id], onDelete: SetNull)
  cycles PanelCycle[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([ownerId])
  @@index([isPublic])
}

model PanelCycle {
  id        Int     @id @default(autoincrement())
  panelId   Int
  name      String
  notes     String?
  sortOrder Int     @default(0)

  panel   Panel         @relation(fields: [panelId], references: [id], onDelete: Cascade)
  markers PanelMarker[]

  @@index([panelId])
}

model PanelMarker {
  id          Int     @id @default(autoincrement())
  cycleId     Int
  proteinId   String?
  antibodyId  Int?
  fluorophore String?
  metalTag    String?
  sortOrder   Int     @default(0)

  cycle    PanelCycle @relation(fields: [cycleId], references: [id], onDelete: Cascade)
  protein  Protein?   @relation(fields: [proteinId], references: [id], onDelete: SetNull)
  antibody Antibody?  @relation(fields: [antibodyId], references: [id], onDelete: SetNull)

  @@index([cycleId])
  @@index([proteinId])
  @@index([antibodyId])
}
